--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "1.0.1",
+    "eslint": "^9.0.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
