--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.0.1",
+    "@pinia/nuxt": "^0.9.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.15.4",
+    "pinia": "^2.3.1",
     "vue": "latest",
     "vue-router": "latest"
   },
