--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.84.0"
   }
 }
