--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@nuxt/eslint": "1.0.1",
@@ -23,11 +25,27 @@
   },
   "packageManager": "pnpm@10.2.1+sha512.398035c7bd696d0ba0b10a688ed558285329d27ea994804a52bad9167d8e3a72bcb993f9699585d3ca25779ac64949ef422757a6c31102c12ab932e5cbe5cc92",
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.4",
+    "@nuxtjs/storybook": "^8.3.3",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@storybook-vue/nuxt": "^8.3.3",
+    "@storybook/addon-essentials": "^8.5.5",
+    "@storybook/addon-interactions": "^8.5.5",
+    "@storybook/blocks": "^8.5.5",
+    "@storybook/builder-vite": "^8.5.5",
+    "@storybook/test": "^8.5.5",
+    "@storybook/vue3": "^8.5.5",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-storybook": "^0.11.2",
     "prettier": "3.5.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "storybook": "^8.5.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
