--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "prettier": "3.5.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.84.0",
-    "storybook": "^8.5.5"
+    "storybook": "^8.5.5",
+    "tailwindcss": "^3.4.17"
   },
   "eslintConfig": {
     "extends": [
